--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ a:hover {
     color: var(--hotmag);
     text-decoration: none;
 }
+img {
+    width: 100%;
+}
 
 #intro {
     padding: 4rem 1rem 10rem 1rem;
@@ -67,6 +70,9 @@ a:hover {
 }
 .section-plum {
     background-color: var(--plum);
+}
+.section-dkblue {
+    background-color: var(--dkblue);
 }
 #contact {
     width: 600px;
@@ -154,6 +160,92 @@ footer i {
 footer i:hover {
     color: var(--hotmag);
 }
+/* projects section */
+#projects {
+    padding: 4rem 1rem;
+}
+#projects h2 {
+    font-size: 2.5rem;
+    margin-bottom: calc(2.5rem * 1.5);
+}
+#projects h3 {
+    color: var(--aqua);
+}
+#projects h4 {  
+    font-size: 1rem;
+    font-family: var(--mono);
+    margin: 0;
+}
+
+.black-box {
+    background-color: var(--black);
+    padding: 1rem;
+    border-radius: 10px;
+    color: var(--white);
+    font-size: 1rem;
+    line-height: 1.5;
+}
+#projects ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    gap: 1rem;
+    font-size: 1rem;
+
+}
+
+#projects img {
+    margin: 2rem 0 4rem 0;
+    border-left: 1px solid var(--aqua);
+    border-top: 1px solid var(--aqua);
+    border-radius: 25px;
+    padding: 1rem;
+
+}
+#projects article {
+    padding: 10px;
+}
+
+@media (min-width: 550px) {
+
+    article {
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        gap: 1rem;
+
+    }
+    #projects img {
+        grid-column: 1/6;
+        grid-row: 1/2;
+    }
+    .text {
+        grid-column: 5/11;
+        grid-row: 1/2;
+        order: 2; 
+        text-align: right;
+    }
+    #projects ul {
+        justify-content: flex-end;
+    }
+    #projects .reverse .text {
+        grid-column: 1/7;
+        order: 2;
+        text-align: left;
+    }
+    #projects .reverse img {
+        grid-column: 6/11;
+        grid-row: 1/2;
+    }
+    #projects .reverse ul {
+        justify-content: start;
+    }
+    
+}
+
+
 
 @media (min-width: 850px) {
 
